@@ -1,7 +1,7 @@
 /*
  *  R : A Computer Language for Statistical Data Analysis
  *  file dounzip.c
- *  first part Copyright (C) 2002-2013  The R Core Team
+ *  first part Copyright (C) 2002-2014  The R Core Team
  *  second part Copyright (C) 1998-2010 Gilles Vollant
  *
  *  This program is free software; you can redistribute it and/or modify
@@ -128,6 +128,7 @@ static int extract_one(unzFile uf, const char *const dest, const char *const fil
         if (strlen(dest) + strlen(filename) > PATH_MAX - 2)
             return 1;
         strncpy(fn0, filename, PATH_MAX);
+        fn0[PATH_MAX - 1] = '\0';
         fn = fn0;
     }
 #ifdef Win32
