@@ -1,7 +1,7 @@
 /*
  *  R : A Computer Language for Statistical Data Analysis
  *  Copyright (C) 1995, 1996	Robert Gentleman and Ross Ihaka
- *  Copyright (C) 1998--2013	The R Core Team.
+ *  Copyright (C) 1998--2014	The R Core Team.
  *
  *  This program is free software; you can redistribute it and/or modify
  *  it under the terms of the GNU General Public License as published by
@@ -1626,8 +1626,9 @@ SEXP attribute_hidden do_while(SEXP call, SEXP op, SEXP args, SEXP rho)
     begincontext(&cntxt, CTXT_LOOP, R_NilValue, rho, R_BaseEnv, R_NilValue, R_NilValue);
     if (SETJMP(cntxt.cjmpbuf) != CTXT_BREAK)
     {
-        while (asLogicalNoNA(eval(CAR(args), rho), call))
+        while (asLogicalNoNA(PROTECT(eval(CAR(args), rho)), call))
         {
+            UNPROTECT(1);
             if (RDEBUG(rho) && !bgn && !R_GlobalContext->browserfinish)
             {
                 SrcrefPrompt("debug", R_Srcref);
@@ -1643,6 +1644,7 @@ SEXP attribute_hidden do_while(SEXP call, SEXP op, SEXP args, SEXP rho)
                 do_browser(call, op, R_NilValue, rho);
             }
         }
+        UNPROTECT(1);
     }
     endcontext(&cntxt);
     SET_RDEBUG(rho, dbg);
