@@ -1,7 +1,7 @@
 /*
  *  R : A Computer Language for Statistical Data Analysis
  *  Copyright (C) 1995, 1996  Robert Gentleman and Ross Ihaka
- *  Copyright (C) 1998-2013   The R Core Team
+ *  Copyright (C) 1998-2014   The R Core Team
  *  Copyright (C) 2002-2005  The R Foundation
  *
  *  This program is free software; you can redistribute it and/or modify
@@ -747,6 +747,7 @@ void setup_Rmainloop(void)
         char *p, Rlocale[1000]; /* Windows' locales can be very long */
         p = getenv("LC_ALL");
         strncpy(Rlocale, p ? p : "", 1000);
+        Rlocale[1000 - 1] = '\0';
         if (!(p = getenv("LC_CTYPE")))
             p = Rlocale;
         /* We'd like to use warning, but need to defer.
