@@ -101,11 +101,17 @@ static void getParseFilename(char *buffer, size_t buflen)
             SEXP filename;
             PROTECT(filename = findVar(install("filename"), R_ParseErrorFile));
             if (isString(filename) && length(filename))
+            {
                 strncpy(buffer, CHAR(STRING_ELT(filename, 0)), buflen - 1);
+                buffer[buflen - 1] = '\0';
+            }
             UNPROTECT(1);
         }
         else if (isString(R_ParseErrorFile) && length(R_ParseErrorFile))
+        {
             strncpy(buffer, CHAR(STRING_ELT(R_ParseErrorFile, 0)), buflen - 1);
+            buffer[buflen - 1] = '\0';
+        }
     }
 }
 
